--- a/src/UserInterface/Twig/Views/templates/views/user/login.html.twig
+++ b/src/UserInterface/Twig/Views/templates/views/user/login.html.twig
@@ -1,5 +1,28 @@
 {% extends "layout.html.twig" %}
 
 {% block content %}
-    <h1>Login form</h1>
+    <div>
+        <h3 class="cover-heading">Sign in</h3>
+        {{ form_start(form) }}
+        {{ form_errors(form) }}
+
+        <div class="form-group{{ form.email.vars.valid ? '' : ' has-error' }}">
+            {{ form_label(form.email, null, { 'label_attr' : { 'class' : 'control-label'}}) }}
+            {{ form_widget(form.email) }}
+            {{ form_errors(form.email) }}
+        </div>
+
+        <div class="form-group{{ form.password.vars.valid ? '' : ' has-error' }}">
+            {{ form_label(form.password, null, { 'label_attr' : { 'class' : 'control-label'}}) }}
+            {{ form_widget(form.password) }}
+            {{ form_errors(form.password) }}
+        </div>
+
+        <div class="form-group">
+           <input type="submit" name="Submit">
+        </div>
+
+        {{ form_end(form) }}
+    </div>
+
 {% endblock %}
