Add sign out link and username when signed in

--- a/src/Slx/UserInterface/Twig/Views/templates/views/home/home.html.twig
+++ b/src/Slx/UserInterface/Twig/Views/templates/views/home/home.html.twig
@@ -2,4 +2,6 @@
 
 {% block content %}
     <h1>Home</h1>
+    <p>Welcome back {{ user.username }}</p>
+    <a href="{{ path('signout') }}">Log out</a>
 {% endblock %}
