--- a/src/Slx/UserInterface/Twig/Views/templates/views/user/login.html.twig
+++ b/src/Slx/UserInterface/Twig/Views/templates/views/user/login.html.twig
@@ -22,6 +22,8 @@
            <input type="submit" name="Submit">
         </div>
 
+        <a href="{{ path('signup') }}">Register!!</a>
+
         {{ form_end(form) }}
     </div>
 
