--- a/src/Slx/UserInterface/Twig/Views/templates/views/user/signup.html.twig
+++ b/src/Slx/UserInterface/Twig/Views/templates/views/user/signup.html.twig
@@ -6,25 +6,27 @@
         {{ form_start(form) }}
         {{ form_errors(form) }}
         <div class="form-group{{ form.username.vars.valid ? '' : ' has-error' }}">
-            {{ form_label(form.username, null, { 'label_attr' : { 'class' : 'control-label'}}) }}
+            {{ form_label(form.username, null, { 'label_attr' : { 'class' : 'col-sm-1 col-form-label'}}) }}
             {{ form_widget(form.username) }}
             {{ form_errors(form.username) }}
         </div>
 
         <div class="form-group{{ form.email.vars.valid ? '' : ' has-error' }}">
-            {{ form_label(form.email, null, { 'label_attr' : { 'class' : 'control-label'}}) }}
+            {{ form_label(form.email, null, { 'label_attr' : { 'class' : 'col-sm-1 col-form-label'}}) }}
             {{ form_widget(form.email) }}
             {{ form_errors(form.email) }}
         </div>
 
         <div class="form-group{{ form.password.vars.valid ? '' : ' has-error' }}">
-            {{ form_label(form.password, null, { 'label_attr' : { 'class' : 'control-label'}}) }}
+            {{ form_label(form.password, null, { 'label_attr' : { 'class' : 'col-sm-1 col-form-label'}}) }}
             {{ form_widget(form.password) }}
             {{ form_errors(form.password) }}
         </div>
 
-        <div class="form-group">
-            <input type="submit" name="Submit">
+        <div class="form-group row">
+            <div class="offset-sm-2 col-sm-10">
+                <button type="submit" class="btn btn-primary">Sign up</button>
+            </div>
         </div>
 
         {{ form_end(form) }}
