--- a/src/Slx/UserInterface/Twig/Views/templates/views/user/login.html.twig
+++ b/src/Slx/UserInterface/Twig/Views/templates/views/user/login.html.twig
@@ -1,9 +1,8 @@
 {% extends "layout.html.twig" %}
 
 {% block content %}
-    <form>
         <h3 class="cover-heading">Sign in</h3>
-        {{ form_start(form) }}
+        {{ form_start(form, {'method': 'POST'}) }}
         {{ form_errors(form) }}
 
         <div class="row form-group{{ form.email.vars.valid ? '' : ' has-error' }}">
@@ -27,6 +26,5 @@
         <a href="{{ path('signup') }}">Register!!</a>
 
         {{ form_end(form) }}
-    </form>
 
 {% endblock %}
