--- a/src/Slx/UserInterface/Twig/Views/templates/views/home/home.html.twig
+++ b/src/Slx/UserInterface/Twig/Views/templates/views/home/home.html.twig
@@ -3,5 +3,6 @@
 {% block content %}
     <h1>Home</h1>
     <p>Welcome back {{ user.username }}</p>
+    <a href="{{ path('createtask') }}">Add task</a>
     <a href="{{ path('signout') }}">Log out</a>
 {% endblock %}
