--- a/src/Slx/UserInterface/Twig/Views/templates/index.html.twig
+++ b/src/Slx/UserInterface/Twig/Views/templates/index.html.twig
@@ -1,6 +1,10 @@
 {% extends "layout.html.twig" %}
 
 {% block content %}
-    Welcome to your new Silex Application!
-    <a href="{{ path('signin') }}">Log in</a>
+    <div class="row">
+        <div class="col">
+            <p>Welcome to your new Silex Application!</p>
+            <a href="{{ path('signin') }}">Log in</a>
+        </div>
+    </div>
 {% endblock %}
