--- a/src/Slx/UserInterface/Twig/Views/templates/views/task/list.html.twig
+++ b/src/Slx/UserInterface/Twig/Views/templates/views/task/list.html.twig
@@ -1,29 +1,33 @@
 {% extends "layout.html.twig" %}
 
 {% block content %}
-    <h2>List of tasks</h2>
-    <div class="col-md-6">
-        <table class="table table-hover">
-            <thead>
-            <tr>
-                <th>#</th>
-                <th>Task title</th>
-                <th>Task description</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for task in tasks %}
-                <tr>
-                    <th scope="row">{{ loop.index }}</th>
-                    <td>{{ task.title }}</td>
-                    <td>{{ task.description }}</td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
+    <div class="row">
+        <h2>List of tasks</h2>
     </div>
-    <div class="col-md-4">
-        <br>
-        <a class="btn btn-primary" href="{{ path('createtask') }}" role="button">Add task</a>
+    <div class="row">
+        <div class="col-12">
+            <table class="table table-hover">
+                <thead>
+                <tr>
+                    <th>#</th>
+                    <th>Task title</th>
+                    <th>Task description</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for task in tasks %}
+                    <tr>
+                        <th scope="row">{{ loop.index }}</th>
+                        <td>{{ task.title }}</td>
+                        <td>{{ task.description }}</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+        <div class="col-md-4">
+            <br>
+            <a class="btn btn-primary" href="{{ path('createtask') }}" role="button">Add task</a>
+        </div>
     </div>
 {% endblock %}
