--- a/src/Slx/UserInterface/Twig/Views/templates/views/home/home.html.twig
+++ b/src/Slx/UserInterface/Twig/Views/templates/views/home/home.html.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-12">
             <h1>Home</h1>
             <p>Welcome back {{ user.username }}</p>
             <a href="{{ path('signout') }}">Log out</a>
