--- a/src/Slx/UserInterface/Twig/Views/templates/views/user/login.html.twig
+++ b/src/Slx/UserInterface/Twig/Views/templates/views/user/login.html.twig
@@ -1,20 +1,25 @@
 {% extends "layout.html.twig" %}
 
 {% block content %}
+    <div>
         <h3 class="cover-heading">Sign in</h3>
         {{ form_start(form, {'method': 'POST'}) }}
         {{ form_errors(form) }}
 
-        <div class="row form-group{{ form.email.vars.valid ? '' : ' has-error' }}">
-            {{ form_label(form.email, null, { 'label_attr' : { 'class' : 'col-sm-2 col-form-label'}}) }}
-            {{ form_widget(form.email) }}
-            {{ form_errors(form.email) }}
+        <div class="row form-group {{ form.email.vars.valid ? '' : ' has-error' }}">
+            {{ form_label(form.email, null, { 'label_attr' : { 'class' : 'col-4 col-form-label'}}) }}
+            <div class="col-8">
+                {{ form_widget(form.email) }}
+                {{ form_errors(form.email) }}
+            </div>
         </div>
 
-        <div class="row form-group{{ form.password.vars.valid ? '' : ' has-error' }}">
-            {{ form_label(form.password, null, { 'label_attr' : { 'class' : 'col-sm-2 col-form-label'}}) }}
-            {{ form_widget(form.password) }}
-            {{ form_errors(form.password) }}
+        <div class="row form-group {{ form.password.vars.valid ? '' : ' has-error' }}">
+            {{ form_label(form.password, null, { 'label_attr' : { 'class' : 'col-4 col-form-label'}}) }}
+            <div class="col-8">
+                {{ form_widget(form.password) }}
+                {{ form_errors(form.password) }}
+            </div>
         </div>
 
         <div class="form-group row">
@@ -26,5 +31,5 @@
         <a href="{{ path('signup') }}">Register!!</a>
 
         {{ form_end(form) }}
-
+    </div>
 {% endblock %}
