--- a/src/Slx/UserInterface/Twig/Views/templates/views/user/signup.html.twig
+++ b/src/Slx/UserInterface/Twig/Views/templates/views/user/signup.html.twig
@@ -5,22 +5,28 @@
         <h3 class="cover-heading">Sign up</h3>
         {{ form_start(form, {'method': 'POST'}) }}
         {{ form_errors(form) }}
-        <div class="form-group{{ form.username.vars.valid ? '' : ' has-error' }}">
-            {{ form_label(form.username, null, { 'label_attr' : { 'class' : 'col-sm-1 col-form-label'}}) }}
-            {{ form_widget(form.username) }}
-            {{ form_errors(form.username) }}
+        <div class="form-group row {{ form.username.vars.valid ? '' : ' has-error' }}">
+            {{ form_label(form.username, null, { 'label_attr' : { 'class' : 'col-4 col-form-label'}}) }}
+            <div class="col-8">
+                {{ form_widget(form.username, { 'attr': {'class': 'form-control'} }) }}
+                {{ form_errors(form.username) }}
+            </div>
         </div>
 
-        <div class="form-group{{ form.email.vars.valid ? '' : ' has-error' }}">
-            {{ form_label(form.email, null, { 'label_attr' : { 'class' : 'col-sm-1 col-form-label'}}) }}
-            {{ form_widget(form.email) }}
-            {{ form_errors(form.email) }}
+        <div class="form-group row {{ form.email.vars.valid ? '' : ' has-error' }}">
+            {{ form_label(form.email, null, { 'label_attr' : { 'class' : 'col-4 col-form-label'}}) }}
+            <div class="col-8">
+                {{ form_widget(form.email, { 'attr' : { 'class' : 'form-control'}}) }}
+                {{ form_errors(form.email) }}
+            </div>
         </div>
 
-        <div class="form-group{{ form.password.vars.valid ? '' : ' has-error' }}">
-            {{ form_label(form.password, null, { 'label_attr' : { 'class' : 'col-sm-1 col-form-label'}}) }}
-            {{ form_widget(form.password) }}
-            {{ form_errors(form.password) }}
+        <div class="form-group row {{ form.password.vars.valid ? '' : ' has-error' }}">
+            {{ form_label(form.password, null, { 'label_attr' : { 'class' : 'col-4 col-form-label'}}) }}
+            <div class="col-8">
+                {{ form_widget(form.password, { 'attr' : { 'class' : 'form-control'}}) }}
+                {{ form_errors(form.password) }}
+            </div>
         </div>
 
         <div class="form-group row">
