--- a/src/Slx/UserInterface/Twig/Views/templates/views/task/list.html.twig
+++ b/src/Slx/UserInterface/Twig/Views/templates/views/task/list.html.twig
@@ -24,7 +24,7 @@
                         <form action="{{ path('removetask') }}" method="POST">
                             <input type="hidden" id="_method" name="_method" value="DELETE" />
                             <input type="hidden" name="task" value="{{ task.id }}"/>
-                            <input class="btn btn-primary" type="submit" value="Submit">
+                            <input class="btn btn-outline-danger btn-sm" type="submit" value="X">
                         </form>
                         </td>
                     </tr>
